# examshield

./: .gitignore  README.md
agent/: go.mod
agent/cmd/agent/: main.go
packaging/deb/: build.sh
packaging/deb/stage/DEBIAN/: control  postinst
packaging/deb/stage/lib/systemd/system/: examshield-agent.service
python-sdk/: pyproject.toml
python-sdk/examshield_cli/: cli.py
scripts/: install-windows.ps1
server/: go.mod  main.go
