[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examshield-cli"
version = "0.1.0"
description = "ExamShield EDU Admin CLI and Python SDK"
readme = "README.md"
authors = [{ name="ExamShield EDU Team", email="support@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "requests>=2.31.0",
  "typer[all]>=0.9.0"
]
keywords = ["exam", "security", "proctoring", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com/examshield"

[project.scripts]
examshield = "examshield_cli.cli:app"
